
	* src/search.c (Pcompile): Abort in error if -P and multiple patterns
	  are specified, with an error message explaining the situation.
	  Fixing this won't be simple; the '\n' characters separating the
	  patterns cannot just be replaced by '|' to create an alternation as
	  back-references are assumed to be local to each individual pattern.

2005-11-10  Charles Levert  <charles_levert@gna.org>

	The introduction of the --only-matching and --color GNU extensions
	to grep added the requirement that each execute() implementation
	not only be able to identify matching lines as a whole, but also
	individual "exact" matches within a line known to be matching,
	from leftmost to rightmost match, when the output from matching
	lines is actually produced.  The interface and implementations
	of execute() were not up to it.  This set of changes aims to
	rectify that situation.  Previously failing tests relative to
	left anchors (^ and \<) and -w should now pass.  This fixes
	<http://savannah.gnu.org/bugs/?func=detailitem&item_id=11579>,
	<http://savannah.gnu.org/patch/?func=detailitem&item_id=1834>,
	<http://savannah.gnu.org/bugs/?func=detailitem&item_id=8243>,
	and possibly part of other, bigger, pending patches.  The problem
	was also compounded by the POSIX requirement to support a pattern
	list instead of just an individual pattern (for -G and -E as well).

	* tests/foad1.sh: Test for increasing/decreasing-length word
	  matches, given pattern order, and leftmost/longest match.
	* tests/fmbtest.sh: Modify test #6 according to new expectations.
	  Better document what tests #6 and #7 are actually for.  Eliminate
	  test #5 in favor of bringing tests #6 and #7 within the F G E loop.
	* src/grep.h (EXECUTE_ARGS): Change last argument from "int exact"
	  to "char const *start_ptr".  Testing for "start_ptr" being non-NULL
	  retains the same semantics as testing for "exact" being non-zero.
	* src/grep.c (print_line_middle): Call execute() with whole